# refusalscope

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  demo.yml  release.yml
docs/: demo.tape
examples/: disguised_refusal_demo.py
probes/: builtin.yaml
refusalscope/: __init__.py  classifier.py  cli.py  drift.py  model.py  probes.py  report.py  signals.py  trace.py
tests/: test_classifier.py  test_cli_exit_code.py  test_drift.py  test_probes.py  test_signals_topic_narrowing.py  test_trace_refusal_field.py
web/: site.json
